<resources>
    <string name="app_name">煮面机</string>
    <string name="menu_item_text_setting">设置</string>
    <string name="menu_item_text_boiler">加热板</string>
    <string name="menu_item_text_main">主控板</string>
    <string name="menu_item_text_weight">称重板</string>
    <string name="text_default">默认信息</string>
    <string name="text_clear">清空</string>
    <string name="text_except_info">异常信息</string>
    <string name="text_close">关</string>
    <string name="text_open">开</string>
    <string name="text_valve1">电磁阀1</string>
    <string name="text_valve2">电磁阀2</string>
    <string name="text_valve3">电磁阀3</string>
    <string name="text_valve4">电磁阀4</string>
    <string name="text_valve5">电磁阀5</string>
    <string name="text_valve6">电磁阀6</string>
    <string name="text_valve7">电磁阀7</string>
    <string name="text_valve8">电磁阀8</string>
    <string name="text_valve9">电磁阀9</string>
    <string name="text_port_title">串口设置</string>
    <string name="text_port_name">串口名称:</string>
    <string name="text_port_open">打开</string>
    <string name="text_position">机械手传感器:</string>
    <string name="text_unknown">未知</string>
    <string name="test_adc11">ADC11:</string>
    <string name="test_adc12">未知</string>
    <string name="text_adc12">ADC12:</string>
    <string name="text_cargo_rotate">货架旋转:</string>
    <string name="text_cargo_elevator">货架升降:</string>
    <string name="text_fetch">取货:</string>
    <string name="text_heat_door">保温门:</string>
    <string name="text_pasta_door">煮面室内门:</string>
    <string name="text_extern_push">外推货:</string>
    <string name="text_pick_door">取物门:</string>
    <string name="text_rotate_origin">旋转零点</string>
    <string name="text_rotate_fault">旋转电机故障</string>
    <string name="text_elevator_origin">升降零点</string>
    <string name="text_elevator_top_origin">升降上零点</string>
    <string name="text_elevator_fault">升降电机故障</string>
    <string name="text_fetch_fault">取货电机故障</string>
    <string name="text_heat_open">保温门打开</string>
    <string name="text_heat_close">保温门关闭</string>
    <string name="text_extern_origin">外推货零点</string>
    <string name="text_extern_fault">外推货故障</string>
    <string name="text_pasta_open">煮面室内门打开</string>
    <string name="text_pasta_close">煮面室内门关闭</string>
    <string name="text_pick_open">取物门打开</string>
    <string name="text_pick_close">取物门关闭</string>
    <string name="text_pick_raster">取物门光栅</string>
    <string name="text_pick_protect">取物门防夹手</string>
    <string name="text_pasta_exist">煮面室内有面条</string>
    <string name="text_cargo_key">补货按钮</string>
    <string name="text_fridge_close">冰箱门关闭</string>
    <string name="text_door_close">大门关闭</string>
    <string name="text_thaw">解冻模式</string>
    <string name="text_clean">清洗模式</string>
    <string name="text_water_pump">开水锅炉水泵</string>
    <string name="text_steam_pump">蒸汽锅炉水泵</string>
    <string name="text_pump_nozzle">喷嘴放水水泵</string>
    <string name="text_heater_water">开水锅炉加热器</string>
    <string name="text_heater_steam">蒸汽锅炉加热器</string>
    
    <string name="def_c">257</string>
    <string name="def_d">197</string>
    <string name="def_k">135</string>
    <string name="def_f">140</string>
    <string name="def_g">110</string>
    <string name="def_e">115</string>
    <string name="def_h">125</string>
    <string name="def_i">120</string>

    <string name="def_drain_cold_water">50</string>
    <string name="def_steam_duration">10</string>
    <string name="def_pre_water">50</string>
    <string name="def_defroze">20</string>
    <string name="def_pour_water">150</string>
    <string name="def_mixsoup">12</string>
    <string name="def_colgg">7</string>
</resources>