<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/y400"
    android:layout_height="@dimen/x340"
    android:layout_margin="@dimen/x10"
    android:padding="@dimen/x10"
    android:background="@drawable/shape_item">

    <Button
        android:id="@+id/id_btn_close"
        android:layout_width="@dimen/x50"
        android:layout_height="@dimen/y50"
        android:background="@drawable/btn_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_text_view_title"
        style="@style/TextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="测试电磁阀"
        android:textSize="@dimen/x45"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/id_sw_valve1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x20"
        android:text="@string/text_valve1"
        android:textOff="@string/text_close"
        android:textOn="@string/text_open"
        android:theme="@style/SwitchStyle"
        android:thumb="@drawable/sw_thumb"
        app:layout_constraintEnd_toStartOf="@+id/id_sw_valve2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_btn_close"
        app:showText="true" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/id_sw_valve2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_valve2"
        android:textOff="@string/text_close"
        android:textOn="@string/text_open"
        android:theme="@style/SwitchStyle"
        android:thumb="@drawable/sw_thumb"
        app:showText="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_sw_valve1"
        app:layout_constraintTop_toTopOf="@+id/id_sw_valve1" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/id_sw_valve3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x8"
        android:text="@string/text_valve3"
        android:textColor="@android:color/black"
        android:textOff="@string/text_close"
        android:textOn="@string/text_open"
        android:thumb="@drawable/sw_thumb"
        android:theme="@style/SwitchStyle"
        app:layout_constraintEnd_toStartOf="@+id/id_sw_valve4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_sw_valve1"
        app:showText="true" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/id_sw_valve4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_valve4"
        android:textColor="@android:color/black"
        android:textOff="@string/text_close"
        android:textOn="@string/text_open"
        android:thumb="@drawable/sw_thumb"
        android:theme="@style/SwitchStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_sw_valve3"
        app:layout_constraintTop_toTopOf="@+id/id_sw_valve3"
        app:showText="true" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/id_sw_valve5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x8"
        android:text="@string/text_valve5"
        android:textColor="@android:color/black"
        android:textOff="@string/text_close"
        android:textOn="@string/text_open"
        android:thumb="@drawable/sw_thumb"
        android:theme="@style/SwitchStyle"
        app:layout_constraintEnd_toStartOf="@+id/id_sw_valve6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_sw_valve3"
        app:showText="true" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/id_sw_valve6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_valve6"
        android:textColor="@android:color/black"
        android:textOff="@string/text_close"
        android:thumb="@drawable/sw_thumb"
        android:textOn="@string/text_open"
        android:theme="@style/SwitchStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_sw_valve5"
        app:layout_constraintTop_toTopOf="@+id/id_sw_valve5"
        app:showText="true" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/id_sw_valve7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x8"
        android:text="@string/text_valve7"
        android:textColor="@android:color/black"
        android:textOff="@string/text_close"
        android:thumb="@drawable/sw_thumb"
        android:textOn="@string/text_open"
        android:theme="@style/SwitchStyle"
        app:layout_constraintEnd_toStartOf="@+id/id_sw_valve8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_sw_valve5"
        app:showText="true" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/id_sw_valve8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_valve8"
        android:textColor="@android:color/black"
        android:thumb="@drawable/sw_thumb"
        android:textOff="@string/text_close"
        android:textOn="@string/text_open"
        android:theme="@style/SwitchStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/id_sw_valve7"
        app:layout_constraintTop_toTopOf="@+id/id_sw_valve7"
        app:showText="true" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/id_sw_valve9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x8"
        android:text="@string/text_valve9"
        android:textColor="@android:color/black"
        android:textOff="@string/text_close"
        android:textOn="@string/text_open"
        android:theme="@style/SwitchStyle"
        android:thumb="@drawable/sw_thumb"
        app:layout_constraintEnd_toEndOf="@+id/id_sw_valve7"
        app:layout_constraintStart_toStartOf="@+id/id_sw_valve7"
        app:layout_constraintTop_toBottomOf="@+id/id_sw_valve7"
        app:showText="true" />

</androidx.constraintlayout.widget.ConstraintLayout>



